--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,12 @@
-absl-py==1.4.0
-alembic==1.12.0
-astunparse==1.6.3
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
-cloudpickle==1.6.0
-cmaes==0.10.0
-colorlog==6.7.0
-contourpy==1.1.0
-cycler==0.11.0
-Farama-Notifications==0.0.4
-filelock==3.12.4
-flatbuffers==23.5.26
-fonttools==4.42.1
-future==0.18.3
-gast==0.4.0
-google-auth==2.23.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-greenlet==2.0.2
-grpcio==1.58.0
-gym==0.26.2
-gym-notices==0.0.8
-gymnasium==0.29.1
-h5py==3.9.0
-idna==3.4
-Jinja2==3.1.2
-keras==2.13.1
-keras-rl==0.4.2
-keras-utils==1.0.13
-kiwisolver==1.4.5
-libclang==16.0.6
-Mako==1.2.4
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.7.3
-mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.1
-numpy==1.24.3
-oauthlib==3.2.2
-opt-einsum==3.3.0
-optuna==3.3.0
-packaging==23.1
-pandas==2.1.0
-Pillow==10.0.0
-protobuf==4.24.3
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pygame==2.5.1
-pyglet==1.5.15
-Pygments==2.16.1
-PyOpenGL==3.1.7
-PyOpenGL-accelerate==3.1.7
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.5.2
-rl==3.1
-rsa==4.9
-scipy==1.11.2
-Shimmy==1.2.1
-six==1.16.0
-SQLAlchemy==2.0.20
-stable-baselines3==2.1.0
-sympy==1.12
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-cpu==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.3.0
-torch==2.0.1
-tqdm==4.66.1
-typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==1.26.16
-Werkzeug==2.3.7
-wrapt==1.15.0
+gym
+numpy
+PyOpenGL
+PyOpenGL-accelerate
+pyglet
+pygame
+stable_baselines3
+tensorflow
+shimmy
+tqdm
+rich
+optuna
